--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 
+
 /* base styles */
 * {
   margin: 0;
   padding: 0;
-  font-family: "Quicksand";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #333;
 }
 
@@ -44,10 +46,44 @@
   padding: 0.2rem 0.4rem;
   transition: 250ms ease;
   backface-visibility: hidden;
+  display: inline-block;
+  align-self: flex-end;
 }
 .btn:active {
   transform: translateY(0.1rem);
 }
+
+.actions {
+  margin-top: 1rem;
+  display: flex;
+}
+.actions > * {
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+.actions .delete-btn {
+  border: 0.5px solid transparent;
+}
+.actions .delete-btn:hover {
+  color: rgb(241, 53, 109);
+  border: 0.5px solid rgba(241, 53, 109, 0.4);
+}
+.actions .delete-btn:active {
+  outline: none;
+  transform: translateY(0.1rem);
+}
+.actions .like-btn {
+  border: 0.5px solid transparent;
+}
+.actions .like-btn:hover {
+  color: rgb(107, 176, 216);
+  border: 0.5px solid rgb(159, 209, 238);
+}
+.actions .like-btn:active {
+  outline: none;
+}
+
 /* blog preview list */
 
 .blog-preview {
@@ -55,14 +91,102 @@
   margin: 20px 0;
   border-bottom: 1px solid #fafafa;
   transition: 250ms ease;
+  border-radius: 0.5rem;
+}
+.blog-preview a {
+  text-decoration: none;
 }
 
 .blog-preview:hover {
-  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 0px 1px rgb(159, 209, 238);
 }
 
 .blog-preview h2 {
   font-size: 20px;
-  color: #f1356d;
+  color: rgb(107, 176, 216);
   margin-bottom: 8px;
 }
+
+.home {
+  display: flex;
+  flex-direction: column;
+}
+
+/* add blogs */
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.wrapper {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.input {
+  padding: .3rem;
+  resize: none;
+  border: .5px solid gray;
+  margin-top: .5rem;
+  transition:  350ms ease;
+  border-radius: 3px;
+}
+.input:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px  rgb(107, 176, 216);
+}
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: .7rem;
+}
+.input-wrapper:first-child {
+  margin-top: 3rem;
+}
+
+.post-btn {
+  margin-top: 1rem;
+  background-color:   rgb(107, 176, 216);
+  border-radius: 3px;
+  border:  none;
+  font-size: .8rem;
+  padding: .5rem 1rem;
+  text-transform: uppercase;
+}
+ /* blog details page */
+ .blog-details h2{
+  font-size: 20px;
+  color: rgb(241, 53, 109);
+  margin-bottom: 10px;
+
+ }
+ 
+ .blog-details .body {
+   margin:  20px 0;
+   text-indent: 30px;
+   text-align: justify;
+ }
+
+
+ .blog-details button {
+  background: rgb(241, 53, 109);
+  color:  #fff;
+  border:  0;
+  padding:  0;
+  border-radius: 8px;
+  cursor: pointer;
+ }
+
+ /* errors and loading */
+ .loading {
+  padding: 2rem;
+  text-align: center; 
+  color: "gray";
+ }
+ .error {
+  color:  gray;
+ }
